--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -15,5 +15,5 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ zakriyafarid.surge.sh --token ${{ secret.SURGE_TOKEN }} 
+      run: surge ./ zakriyafarid.surge.sh --token ${{ secrets.SURGE_TOKEN }} 
       
